--- a/public-html/css/trombi.css
+++ b/public-html/css/trombi.css
@@ -1,4 +1,3 @@
-
 #jg {
   filter: sepia(50%);
   transform: rotateX(-360deg) scale3d(1, 1, 1);
@@ -7,6 +6,7 @@
 #jg:hover {
   filter: sepia(100%);
   transform: rotateX(360deg) scale3d(1.5, 1.5, 1.5);
+  transition: 0.5s; }
 
 #fernandes {
   filter: sepia(100%);
